@@ -4,11 +4,11 @@ import com.guihvicentini.keycloakconfigtool.adapters.GroupResourceAdapter;
 import com.guihvicentini.keycloakconfigtool.mappers.GroupConfigMapper;
 import com.guihvicentini.keycloakconfigtool.models.GroupConfig;
 import lombok.extern.slf4j.Slf4j;
+import org.keycloak.representations.idm.MappingsRepresentation;
+import org.keycloak.representations.idm.RoleRepresentation;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -24,10 +24,40 @@ public class GroupExportService {
     }
 
     public List<GroupConfig> getGroupConfigs(String realm) {
+        var groups = retrieveGroupConfigs(realm);
+        groups.forEach(group -> {
+            var roleMappings = adapter.getGroupRoleMappings(realm, group.getName());
+            group.setClientRoles(retrieveClientRoles(roleMappings));
+            group.setRealmRoles(retrieveRealmRoles(roleMappings));
+        });
+
+        return groups;
+    }
+
+    private List<GroupConfig> retrieveGroupConfigs(String realm) {
         return Optional.ofNullable(adapter.getAll(realm))
                 .orElse(new ArrayList<>())
                 .stream()
                 .map(mapper::mapToConfig)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private Map<String, List<String>> retrieveClientRoles(MappingsRepresentation mappingsRepresentation) {
+        return Optional.ofNullable(mappingsRepresentation)
+                .map(MappingsRepresentation::getClientMappings)
+                .orElse(new HashMap<>()).entrySet()
+                .stream()
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        e -> e.getValue().getMappings().stream().map(RoleRepresentation::getName).toList()));
+    }
+
+    private List<String> retrieveRealmRoles(MappingsRepresentation mappingsRepresentation) {
+        return Optional.ofNullable(mappingsRepresentation)
+                .map(MappingsRepresentation::getRealmMappings)
+                .orElse(new ArrayList<>())
+                .stream()
+                .map(RoleRepresentation::getName)
+                .toList();
     }
 }
